--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -146,6 +146,7 @@ hpc.bus.collectionDownloadTaskExecutorThreadPoolSize=100
 hpc.bus.dataObjectDownloadTaskExecutorThreadPoolSize=100
 hpc.bus.dataObjectFileSystemTaskExecutorThreadPoolSize=10
 hpc.bus.getAllDataObjectsExecutorThreadPoolSize=20
+hpc.bus.dataObjectMetadataUpdateTaskExecutorThreadPoolSize=10
 hpc.bus.getAllDataObjectsDefaultPageSize=1000
 hpc.bus.sendReviewNotificationToUser=false
 hpc.bus.maxPermittedInProcessDownloadTasksPerUser=1
