--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -39,7 +39,7 @@
 		<spring.retry.version>1.3.0</spring.retry.version>
         <aspectj.version>1.9.6</aspectj.version>
 		<amazon-aws.version>1.12.420</amazon-aws.version>
-		<jackson.version>2.12.7</jackson.version>
+		<jackson.version>2.18.1</jackson.version>
 		<jargon.version>4.3.3.0-RELEASE</jargon.version>
 		<jjwt.version>0.12.5</jjwt.version>
 		<bouncycastle.version>1.70</bouncycastle.version>
@@ -349,8 +349,8 @@
 				<version>${jackson.version}</version>
 			</dependency>
 			<dependency>
-	            <groupId>com.fasterxml.jackson.jaxrs</groupId>
-	            <artifactId>jackson-jaxrs-json-provider</artifactId>
+	            <groupId>com.fasterxml.jackson.jakarta.rs</groupId>
+	            <artifactId>jackson-jakarta-rs-json-provider</artifactId>
 	            <version>${jackson.version}</version>
 	        </dependency>
 			<dependency>
