--- a/src/hpc-server/hpc-app-service-impl/pom.xml
+++ b/src/hpc-server/hpc-app-service-impl/pom.xml
@@ -97,8 +97,8 @@
 			<artifactId>spring-test</artifactId>
 		</dependency> 
 		<dependency>
-			<groupId>jakarta.mail</groupId>
-			<artifactId>jakarta.mail-api</artifactId>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>jakarta.mail</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
