--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -403,9 +403,9 @@
 			    <scope>runtime</scope>
 			</dependency>
 			<dependency>
-				<groupId>jakarta.mail</groupId>
-				<artifactId>jakarta.mail-api</artifactId>
-				<version>2.1.3</version>
+				<groupId>com.sun.mail</groupId>
+				<artifactId>jakarta.mail</artifactId>
+				<version>2.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.aspectj</groupId>
