--- a/src/hpc-cli/pom.xml
+++ b/src/hpc-cli/pom.xml
@@ -32,10 +32,6 @@
 					<artifactId>commons-logging</artifactId>
 					<groupId>commons-logging</groupId>
 				</exclusion>
-				<exclusion>
-					<artifactId>org.slf4j</artifactId>
-					<groupId>slf4j-api</groupId>
-				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -84,6 +80,12 @@
 			<groupId>org.apache.httpcomponents.client5</groupId>
 			<artifactId>httpclient5</artifactId>
 			<version>5.4.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>org.slf4j</artifactId>
+					<groupId>slf4j-api</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -212,8 +214,7 @@
 		<dependency>
 		    <groupId>ch.qos.logback</groupId>
 		    <artifactId>logback-classic</artifactId>
-		    <version>1.3.14</version>
-		    <scope>runtime</scope>
+		    <version>1.5.12</version>
 		</dependency>
 		<dependency>
 		    <groupId>commons-beanutils</groupId>
