--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -53,6 +53,10 @@
                     <groupId>log4j</groupId>
                     <artifactId>log4j</artifactId>
                 </exclusion>
+		        <exclusion>
+		          <groupId>org.bouncycastle</groupId>
+		          <artifactId>bcprov-jdk15on</artifactId>
+		        </exclusion>
             </exclusions>
 		</dependency>
 		<dependency>
