--- a/src/hpc-cli/pom.xml
+++ b/src/hpc-cli/pom.xml
@@ -217,6 +217,11 @@
 		    <version>1.5.12</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>2.0.16</version>
+		</dependency>
+		<dependency>
 		    <groupId>commons-beanutils</groupId>
 		    <artifactId>commons-beanutils</artifactId>
 		    <version>1.9.4</version>
@@ -277,6 +282,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<id>install-cli-dependencies</id>
